@@ -65,6 +65,9 @@ class LanguageHi extends LanguageUtf8 {
 			return $number;
 		}
 	}
+	function timeanddate( $ts, $adj = false ) {
+		return $this->formatNum( Language::timeanddate( $ts, $adj ) );
+	}
 
 }
 
